# velvet-europar

./: .gitignore  README.md  process_data.sh  run_exp.sh  smoke_test.sh
benchmarks/runscripts/: adapint.sh  bh.sh  fib.sh  matmul.sh  nqueens.sh  run_exp.sh  sort.sh  stats.sh  tsp.sh
benchmarks/rust/adapint/: Cargo.toml
benchmarks/rust/adapint/src/: main.rs
benchmarks/rust/bh/: Cargo.toml  build.rs
benchmarks/rust/bh/src/: bh_par.rs  bh_seq.rs  main.rs  par_body.rs  par_tree.rs  quad.rs  seq_body.rs  seq_tree.rs
benchmarks/rust/fib/: Cargo.toml
benchmarks/rust/fib/src/: main.rs
benchmarks/rust/matmul/: Cargo.toml  build.rs
benchmarks/rust/matmul/src/: main.rs  matrix_par.rs  matrix_seq.rs  rayon_demo.rs
benchmarks/rust/matmul_unsafe/: Cargo.toml
benchmarks/rust/matmul_unsafe/src/: main.rs  matrix_par.rs  matrix_seq.rs
benchmarks/rust/nqueens/: Cargo.toml  build.rs
benchmarks/rust/nqueens/src/: main.rs
benchmarks/rust/sort/: Cargo.toml  build.rs
benchmarks/rust/sort/src/: main.rs  par_merge.rs  par_rayon.rs
benchmarks/rust/sort_unsafe/: Cargo.toml
benchmarks/rust/sort_unsafe/src/: main.rs
benchmarks/rust/tsp/: Cargo.toml
benchmarks/rust/tsp/src/: main.rs
data_processing/data/: adapint.csv  bh.csv  fib.csv  matmul.csv  nqueens.csv  sort.csv  tsp.csv
data_processing/data/stats/adapint/: 20260309_193324.err  20260309_193324.out  stats1.20260309_193324.csv  stats2.20260309_193324.csv  stats3.20260309_193324.csv  stats4.20260309_193324.csv  stats5.20260309_193324.csv
data_processing/scripts/: main.py  plot.py  print.py  process_data.py
(+42 files in other folders)
